--- a/shit/css/style.css
+++ b/shit/css/style.css
@@ -1,14 +1,10 @@
 /*GLOBAL*/
 
-html *
-{
-	font-family: 'Quicksand', sans-serif !important;
-}
+html * { font-family: 'Quicksand', sans-serif !important; }
 
-.menuSolid {
-	background-color: #222222;
-	color: #eeeeee;
-}
+.menuSolid { background-color: #222222; }
+
+.textWhite { color: #dddddd; }
 
 /*LOGIN*/
 
@@ -21,6 +17,7 @@ html *
 }
 
 .loginChild {
+	/*middle of screen*/
 	grid-area: 2 / 2 / 2 / 2;
 
 	text-align: center;
@@ -28,16 +25,71 @@ html *
 	padding: 20px;
 }
 
+/*define the layout of the login contents*/
 .loginContentParent {
 	display: grid;
 	grid-template-columns: auto auto;
-	grid-template-rows: auto auto auto;
+	grid-template-rows: auto auto auto auto auto;
+	grid-template-areas: 	"cardhead cardhead"
+							"error error"
+							"user1 user2"
+							"pass1 pass2"
+							"signup login";
 }
 
-.loginUsername {
-	grid-area: 1 / 1 / 2 / 3;
+/*create custom html tags for the login content*/
+#loginContent > cardhead { grid-area: cardhead; }
+#loginContent > error { grid-area: error; }
+#loginContent > user1 { grid-area: user1; }
+#loginContent > user2 { grid-area: user2; }
+#loginContent > pass1 { grid-area: pass1; }
+#loginContent > pass2 { grid-area: pass2; }
+#loginContent > signup { grid-area: signup; }
+#loginContent > login { grid-area: login; }
+
+.loginContent { padding: 10px; }
+
+.loginButton {
+	background-color: #ffffff00;
+	border: solid;
+	border-color: #ffffff;
+	border-width: 1;
+	padding: 10px;
+	cursor: pointer;
 }
 
-.loginPassword {
-	grid-column-start: 
+.loginInput {
+	background-color: #ffffff00;
+	border: none;
+	border-bottom: solid;
+	border-bottom-color: grey;
+	border-bottom-width: 1;
+	outline: none;
 }
+
+/*SIGNUP*/
+
+/*define the layout od the signup contents*/
+.signupContentParent {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-template-rows: auto auto auto auto auto;
+	grid-template-areas: 	"cardhead cardhead"
+							"error error"
+							"user1 user2"
+							"email1 email2"
+							"pass1 pass2"
+							"login signup";
+}
+
+/*create custom html tags for the signup content*/
+#signupContent > cardhead { grid-area: cardhead; }
+#signupContent > error { grid-area: error; }
+#signupContent > user1 { grid-area: user1; }
+#signupContent > user2 { grid-area: user2; }
+#signupContent > email1 { grid-area: email1; }
+#signupContent > email2 { grid-area: email2; }
+#signupContent > pass1 { grid-area: pass1; }
+#signupContent > pass2 { grid-area: pass2; }
+#signupContent > signup { grid-area: signup; }
+#signupContent > login { grid-area: login; }
